Moved tree detection to the server